k8s/prod/frontend-prod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feats-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feats-frontend
  template:
    metadata:
      labels:
        app: feats-frontend
    spec:
      containers:
      - name: feats-frontend
        image: registry.digitalocean.com/group3/feats-frontend:1.0.1
        resources:
          requests:
            cpu: 250m
            memory: 64Mi
          limits:
            memory: 128Mi
            cpu: 500m
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: feats-frontend
spec:
  type: LoadBalancer
  selector:
    app: feats-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
    - protocol: TCP
      port: 443
      targetPort: 80
      name: https
